--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/ui": "^4.5",
         "spatie/laravel-permission": "^6.7",
         "yajra/laravel-datatables": "^11.0",
-        "yajra/laravel-datatables-oracle": "^11.0"
+        "yajra/laravel-datatables-oracle": "^11.0",
+        "yoeunes/toastr": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
